--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 dav-server = "0.8.0"
 libp2p = "0.56.0"
+quinn = "0.11.9"
 sqlite = "0.37.0"
 uuid = { version = "1.19.0", features = ["v4"] }
