--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2024"
 dav-server = "0.8.0"
 libp2p = "0.56.0"
 quinn = "0.11.9"
+rcgen = "0.13.0"
 sqlite = "0.37.0"
 uuid = { version = "1.19.0", features = ["v4"] }
+tokio = { version = "1", features = ["full"] }
+anyhow = "1.0.75"
