--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,5 @@ sqlite = "0.37.0"
 uuid = { version = "1.19.0", features = ["v4"] }
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.75"
+bcrypt = "0.17.1"
+axum = "0.8.7"
