--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,3 +14,7 @@ anyhow = "1.0.75"
 bcrypt = "0.17.1"
 rusqlite = "0.37.0"
 serde = "1.0.228"
+axum = "0.8.7"
+tower-http = "0.6.8"
+thiserror = "2.0.17"
+serde_json = "1.0.145"
