--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,3 +18,5 @@ axum = "0.8.7"
 tower-http = "0.6.8"
 thiserror = "2.0.17"
 serde_json = "1.0.145"
+futures-util = "0.3.31"
+tokio-tungstenite = "0.28.0"
