--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,7 +15,7 @@ bcrypt = "0.17.1"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 serde = "1.0.228"
 axum = { version = "0.8.7", features = ["ws"] }
-tower-http = "0.6.8"
+tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "trace"] }
 thiserror = "2.0.17"
 serde_json = "1.0.145"
 futures-util = "0.3.31"
