--- a/Yueling/package.json
+++ b/Yueling/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tauri-apps/plugin-autostart": "^2.5.1",
     "vue": "^3.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
     "typescript": "~5.5.0",
-    "vue-tsc": "^2.0.0",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vue-tsc": "^2.0.0"
   }
 }
