--- a/Yueling/src-tauri/Cargo.toml
+++ b/Yueling/src-tauri/Cargo.toml
@@ -24,3 +24,6 @@ quinn = "0.11.9"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-autostart = "2"
+
