--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,6 +123,10 @@ jobs:
         with:
           node-version: '20'
 
+      # 安装系统依赖
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y pkg-config libglib2.0-dev libgtk-3-dev
+
       # 设置Rust环境
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
